Fix css structure for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,7 +574,7 @@ span.bars {
 
 #food-menu-section {
     width: 100%;
-    height: 1200px;
+    height: 1800px;
     position: absolute;
     overflow: hidden;
     z-index: -1;
@@ -650,41 +650,7 @@ span.bars {
     background-color: yellow;
 }
 
-/* food and prices */
-
-.food-and-prices {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
-.food-left {
-    width: 85%;
-    height: 33%;
-    float: left;
-    background: red;
-    list-style-type: none;
-    color: black;
-}
-
-.food-left ul > li {
-    list-style-type: none;
-}
-
-.prices-right {
-    color: black;
-    width: 15%;
-    height: 33%;
-    float: right;
-    background: white;
-}
-
-.prices-right ul > li {
-    list-style-type: none;
-}
-
-/* food menu logo on left */
-
+/* beginning of food menu */
 #inside-menu-left {
     width: 100%;
     height: 100%;
@@ -700,6 +666,18 @@ span.bars {
     position: absolute;
 }
 
+.menu-heading {
+    font-size: 2.5rem;
+    border-top: 2px solid #F79F24;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.h-one {
+    top: 330px;
+}
+
 #inside-menu-left > a {
     text-decoration: none;
     position: relative;
@@ -708,13 +686,53 @@ span.bars {
     background-color: red;
 }
 
-.menu-headings {
-    position: absolute;
+/* food and prices */
+
+.food-left {
+    width: 85%;
+    height: 25%;
+    text-align: center;
+    text-indent: 10%;
+    float: left;
+    background: red;
+    list-style-type: none;
+    color: black;
 }
-/* food container one */
-.fp-one {
+
+.food-left ul > li {
+    list-style-type: none;
+}
+
+.prices-right {
+    color: black;
+    width: 15%;
+    height: 25%;
+    float: right;
+    background: white;
+}
+
+.prices-right ul > li {
+    list-style-type: none;
+}
+
+/* food and price containers */
+
+.food-prices-one {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    transform: translateY(325px);
+    z-index: 5;
+    line-height: 35px;
+    transform: translateY(400px);
+}
+
+.food-prices-two {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 5;
+    line-height: 35px;
+    transform: translateY(1200px);
 }
 
 /* gallery page */
